--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
 encrypt:
   failOnError: false
   keyStore:
-    location: classpath:/root/keystore.jks
+    location: file:keystore.jks
     alias: homepage
     password: ${KEYSTORE_PASSWORD}
     secret: ${KEYSTORE_PASSWORD}
