--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
 	<packaging>jar</packaging>
 
 	<name>configserver</name>
-	<description>Demo project for Spring Boot</description>
 
 	<scm>
 		<connection>scm:git:git@github.com:maximilianwollnik/configserver.git</connection>
@@ -55,6 +54,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
