change hostname via cloud client
- still not able to set the new hostname

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: configserver
+  cloud:
+    client:
+      hostname: maximilianwollnik.de
 encrypt:
   failOnError: false
   keyStore:
