--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ eureka:
     statusPageUrlPath: ${management.context-path}/info
     healthCheckUrlPath: ${management.context-path}/health
     metadataMap:
-      instanceId: ${eureka.instance.hostname}:${spring.application.name}:${server.port}
+      instanceId: ${spring.application.name}:${server.port}
 
 spring:
   cloud:
